--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-27  Lukas Novotny  <lukasnov@cvs.gnome.org>
+
+ 	* cs.po: Updated Czech translation.
+
 2006-04-27  Ankit Patel  <ankit644@yahoo.com>
 
         * gu.po: Updated Gujarati Translation.
