--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-04-28  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	* po/LINGUAS:
+	Update handling of po/LINGUAS for new instructions.  Refer
+	to http://live.gnome.org/GnomeGoals/PoLinguas
+
+	Patch from Brian Pepple  <bdpepple@gmail.com>
+
 2006-04-27  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-actions.h:
