--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-29  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-04-23  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
