Fix wording: Use "criterion" instead of "criterium". (#331682)
2006-05-01  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-query-editor.c: (nautilus_query_editor_add_row),
	(finish_first_line):
	Fix wording: Use "criterion" instead of "criterium". (#331682)

	Patch from Farzaneh Sarafraz <farzaneh@farsiweb.info>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-05-01  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-query-editor.c: (nautilus_query_editor_add_row),
+	(finish_first_line):
+	Fix wording: Use "criterion" instead of "criterium". (#331682)
+
+	Patch from Farzaneh Sarafraz <farzaneh@farsiweb.info>
+
+2006-05-01  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-program-choosing.c:
 	(application_cannot_open_location):
 	Remove bogus period from strings. (#336909)
