Fix typo in the query filechooser window title. (#325284)
2006-05-01  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-query-editor.c: (location_row_create_widgets):
	Fix typo in the query filechooser window title. (#325284)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-01  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-query-editor.c: (location_row_create_widgets):
+	Fix typo in the query filechooser window title. (#325284)
+
+2006-05-01  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-query-editor.c: (nautilus_query_editor_add_row),
 	(finish_first_line):
 	Fix wording: Use "criterion" instead of "criterium". (#331682)
