--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-02  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2006-05-02  Alexander Larsson  <alexl@redhat.com>
 
 	reviewed by: <delete if not using a buddy>
