--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -4,10 +4,10 @@
 
 2006-05-02  Alexander Larsson  <alexl@redhat.com>
 
-	reviewed by: <delete if not using a buddy>
-
 	* LINGUAS:
 	* mg.po:
+	Add malagasy translation.
+	from Thierry Randrianiriana <randrianiriana@gmail.com>
 
 2006-05-02  Funda Wang  <fundawang@linux.net.cn>
 
