--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2006-05-02  Øivind Hoel  <ohoel@cvs.gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
+2006-05-02  Øivind Hoel  <ohoel@cvs.gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-05-02  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gl.po: Updated Galician Translation.
