--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2006-05-03  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-places-sidebar.c: (volume_op_callback):
+	(row_activated_callback), (bookmarks_popup_menu_detach_cb),
+	(eject_for_type), (set_visibility),
+	(bookmarks_check_popup_sensitivity), (get_selected_drive),
+	(mount_shortcut_cb), (unmount_shortcut_cb), (eject_shortcut_cb),
+	(format_shortcut_cb), (bookmarks_build_popup_menu):
+	Add mount, unmount, eject and format menu items to the popup menu
+	of drives in the places sidebar. (#316184)
+
+	Based on a patch from Xavier Claessens <xclaesse@gmail.com>
+
 2006-05-01  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
