--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-04  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-navigation-action.c:
+	(nautilus_navigation_action_class_init), (disconnect_proxy):
+	Disconnect signal handlers registered when connecting proxies.
+
 2006-05-03  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-places-sidebar.c: (volume_op_callback):
