--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-05  Ankit Patel  <ankit644@yahoo.com>
+
+        * gu.po: Updated Gujarati Translation.
+
 2006-05-02  Øivind Hoel  <ohoel@cvs.gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
