Translation updated by Ivar Smolin.
2006-05-05  Priit Laes  <amd@store20.com>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-28 05:39+0200\n"
-"PO-Revision-Date: 2006-04-28 16:19+0300\n"
+"PO-Revision-Date: 2006-05-04 20:03+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -491,6 +491,8 @@ msgid ""
 "If set to true, then Nautilus lets you edit some of the more esoteric "
 "options of a file in the file preferences dialog."
 msgstr ""
+"Kui märgitud, siis lubab Nautilus failieelistuste dialoogis redigeerida "
+"faili mõningaid esoteerilisi valikuid."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:41
 msgid ""
@@ -545,6 +547,8 @@ msgid ""
 "displayed. Currently, only files ending in a tilde (~) are considered backup "
 "files."
 msgstr ""
+"Kui märgitud, siis kuvatakse ka varufaile (näiteks Emacs'i poolt looduid. "
+"Hetkel liigitatakse varufailide alla failid, mille nimi lõpeb \"~\" märgiga."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:48
 msgid ""
