*** empty log message ***

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-06  Pema Geyleg <pema.geyleg@gmail.com>
+
+	* dz.po: Updated Dzongkha translation.
+
 2006-05-05  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
