Fix typo in function name: s/availible/available/ (#326053)
2006-05-07  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-query-editor.c: (type_combo_changed):
	Fix typo in function name: s/availible/available/ (#326053)

	* configure.in:
	Require eel 2.15.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-05-07  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-query-editor.c: (type_combo_changed):
+	Fix typo in function name: s/availible/available/ (#326053)
+
+	* configure.in:
+	Require eel 2.15.1
+
 2006-05-04  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-navigation-action.c:
