--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-08  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
+
+	* id.po: Updated.
+
 2006-05-06  Pema Geyleg <pema.geyleg@gmail.com>
 
 	* dz.po: Updated Dzongkha translation.
