--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-05-08  Federico Mena Quintero  <federico@novell.com>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(handle_transfer_ok): Don't special-case the first 0 bytes of the
+	file in the case of reporting actual copy/move progress.  It is
+	fine to update both the labels and the sizes every time.  Fixes
+	http://bugzilla.gnome.org/show_bug.cgi?id=341064
+	https://bugzilla.novell.com/show_bug.cgi?id=66073
+
 2006-05-08  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-places-sidebar.c: (add_place), (update_places),
