Hungarian translation updated.
2006-05-10  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Hungarian translation updated.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-10  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2006-05-08  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
 
 	* id.po: Updated.
