*** empty log message ***

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-13  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
+
+	* br.po: Updated Breton translation.
+
 2006-05-07  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
