--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Major changes in 2.15.1 are:
+* Improve startup performance
+* Use GOption
+* Fix selection box width calculation
+* Improve file permission handling
+* Add volume operations to the file menu, tree and places sidebar
+* New po/LINGUAS handling
+* Smarter date handling for images
+* HIG fixes
+* Fix various typos
+* Fix about dialog to work with current gtk+
+* Fix crashes
+* Show network volumes in the places sidebar
+* Fix progress dialog showing the wrong file
+* Code cleanups
+
 Major changes in 2.14.1 are:
 * Translation updates
 * Code cleanups
