--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== nautilus 2.15.1 ===
+
+2006-05-16  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
 2006-05-16  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-icon-container.c: (icon_get_size),
