--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-16  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post-release version bump.
+
 === nautilus 2.15.1 ===
 
 2006-05-16  Martin Wehner  <martin.wehner@gmail.com>
