--- a/po/es.po
+++ b/po/es.po
@@ -4,26 +4,26 @@
 # Nautilus's Spanish translation file.
 # Copyright © 2000-2003, 2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
+#
 # Jorge Carrasquilla Soares <jorge@conectiva.com.br>, 2000.
 # Carlos Perelló Marín <carlos@gnome-db.org>, 2000,2002.
 # Ismael Olea <ismael@olea.org>, 2001.
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
 # Pablo Gonzalo del Campo <pablodc@bigfoot.com>, 2000, 2001, 2002, 2003, 2004.
 # Pablo G. del Campo <pablodc@bigfoot.com>, 2004.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-20 15:40+0100\n"
-"PO-Revision-Date: 2006-04-02 14:36+0200\n"
+"PO-Revision-Date: 2006-05-16 17:42+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
-"Language-Team:  <traductores@es.gnome.org>\n"
+"Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11.2\n"
 
 # components/help/hyperbola-filefmt.c:398
 # components/help/hyperbola-filefmt.c:671
@@ -4272,7 +4272,7 @@ msgstr "ilegible"
 #, c-format
 msgid "%d item, with size %s"
 msgid_plural "%d items, totalling %s"
-msgstr[0] "%0d Un elemento, con un tamaño de %s"
+msgstr[0] "%d elemento, con un tamaño de %s"
 msgstr[1] "%d elementos, %s en total"
 
 # src/file-manager/fm-properties-window.c:864
