Updated Spanish translation.
2006-05-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-20 15:40+0100\n"
-"PO-Revision-Date: 2006-05-16 17:42+0200\n"
+"PO-Revision-Date: 2006-05-16 22:00+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -4474,12 +4474,12 @@ msgstr "Última modificación:"
 #: ../src/file-manager/fm-properties-window.c:3074
 #, c-format
 msgid "The permissions of \"%s\" could not be determined."
-msgstr "Los permisos de «%s» se han podido determinar."
+msgstr "Los permisos de «%s» no se han podido determinar."
 
 # src/file-manager/fm-properties-window.c:1641
 #: ../src/file-manager/fm-properties-window.c:3077
 msgid "The permissions of the selected file could not be determined."
-msgstr "Los permisos del archivo seleccionado se han podido determinar."
+msgstr "Los permisos del archivo seleccionado no se han podido determinar."
 
 #: ../src/file-manager/fm-properties-window.c:3235
 msgid "There was an error displaying help."
