--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* nautilus-folder-handler.desktop.in: Add internationalization
+	* po/POTFILES.in: Add the file.
+
+
 2006-05-16  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-icon-container.c (fm_icon_container_get_icon_images):
