--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* nautilus-folder-handler.desktop.in: Add i18n.
+	* po/POTFILES.in: Add new file.
+
+
 2006-05-09  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-window-manage-views.c:
