--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-17  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 2006-05-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
