Updated French translation.
2006-05-18  Benoît Dejean  <benoit@placenet.org>

        * fr.po: Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-18  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 2006-05-18  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
