Updated nautilus zh_CN translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-19  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2006-05-18  Benoît Dejean  <benoit@placenet.org>
 
 	* fr.po: Updated French translation.
