--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-19  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2006-05-18  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
