--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-20  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated.
+
 2006-05-20  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gl.po: Updated Galician Translation.
