Updated Finnish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-22  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2006-05-21  Daniel Nylander  <po@danielnylander.se>
 
         * sv.po: Swedish translation updated.
