Updated French translation.
2006-05-22  Benoît Dejean  <benoit@placenet.org>

	* fr.po: Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-22  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 2006-05-22  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
