Updated Czech translation.
2006-05-23  Jakub Friedl  <jfriedl@suse.cz>

  * cs.po: Updated Czech translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-23  Jakub Friedl  <jfriedl@suse.cz>
+
+	* cs.po: Updated Czech translation.
+
 2006-05-19  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
@@ -9,7 +13,7 @@
 
 2006-05-18  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-05-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
@@ -33,7 +37,7 @@
 
 2006-05-05  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-05-02  Øivind Hoel  <ohoel@cvs.gnome.org>
 
