--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-24  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-view.c:
+	Remove unused include of eel-cell-renderer-pixbuf-list.h
+
 2006-05-24  Paolo Borelli  <pborelli@katamail.com>
 
 	* libnautilus-private/nautilus-file.c (nautilus_file_get_uri_scheme):
