Use g_signal_connect_data instead of the outdated eel equivalent.
2006-05-24  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-information-panel.c:
	* src/nautilus-window-bookmarks.c:
	* src/file-manager/fm-properties-window.c:

	Use g_signal_connect_data instead of the outdated eel
equivalent.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-05-24  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-information-panel.c:
+	* src/nautilus-window-bookmarks.c:
+	* src/file-manager/fm-properties-window.c:
+
+	Use g_signal_connect_data instead of the outdated eel equivalent.
+
 2006-05-24  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c:
