--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-24  Daniel Nylander  <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2006-05-24  Inaki Larranaga  <doteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
