--- a/po/fr.po
+++ b/po/fr.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.14.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-22 19:15+0200\n"
+"POT-Creation-Date: 2006-05-25 11:40+0200\n"
 "PO-Revision-Date: 2006-05-17 00:59+0100\n"
 "Last-Translator: Christophe Bliard <christophe.bliard@trux.info>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
@@ -2542,6 +2542,10 @@ msgstr "Modifie la manière de gérer les fichiers"
 #: ../nautilus-file-management-properties.desktop.in.h:2
 msgid "File Management"
 msgstr "Gestionnaire de fichiers"
+
+#: ../nautilus-folder-handler.desktop.in.h:1
+msgid "Open Folder"
+msgstr "Ouvrir le dossier"
 
 #: ../nautilus-home.desktop.in.h:1 ../src/file-manager/fm-tree-view.c:1245
 msgid "Home Folder"
@@ -5900,6 +5904,3 @@ msgstr "Définit le niveau de zoom de la vue en cours"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Affiche vos serveurs réseaux dans le gestionnaire de fichiers Nautilus"
-
-#~ msgid "Open Folder"
-#~ msgstr "Ouvrir le dossier"
