--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2006-05-24  Daniel Nylander  <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
