Fixed 'mặt bàn'

--- a/po/vi.po
+++ b/po/vi.po
@@ -595,8 +595,7 @@ msgstr "Nếu đặt là true thì biểu tượng liên kết với Sọt Rác 
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
-msgstr "Nếu đặt là true thì biểu tượng liên kết với đĩa đã gắn sẽ được đặt lên mặt "
-"bàn."
+msgstr "Nếu đặt là true thì biểu tượng liên kết với đĩa đã gắn sẽ được đặt lên màn hình nền."
 
 #:../libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
 msgid ""
