--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-28  Pema Geyleg  <pema.geyleg@gmail.com>
+
+	* dz.po: updated Dzongkha translation.
+
 2006-05-26  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
