--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-05-28  Pema Geyleg  <pema.geyleg@gmail.com>
 
 	* dz.po: updated Dzongkha translation.
