--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-29  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-icon-factory.c: (load_pixbuf_svg):
+	Limit max. returned SVG icon size to requested icon size.
+
 2006-05-24  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-file-utilities.c:
