--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-30  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	* libnautilus-private/nautilus-thumbnails.c:
+	* libnautilus-private/nautilus-thumbnails.h:
+	Use GdkPixbufLoader for thumbnailing.
+
 2006-05-29  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-factory.c: (load_pixbuf_svg):
