--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-04  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2006-05-28  Pema Geyleg  <pema.geyleg@gmail.com>
 
 	* dz.po: Updated Dzongkha translation.
