--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-10  Josep Puigdemont Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2006-06-05  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
