Update for release
2006-06-12  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.15.2 are:
+* Don't allow formating of mounted floppies
+* Perfomance fixes
+* Don't use deprecated eel features
+* Use less memory when thumbnailing
+
 Major changes in 2.15.1 are:
 * Improve startup performance
 * Use GOption
