--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-12  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2006-05-30  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-factory.c:
