Post-release version bump
2006-06-12  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post-release version bump

=== nautilus 2.15.2 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-06-12  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post-release version bump
+
+=== nautilus 2.15.2 ===
+
+2006-06-12  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
