Updated German translation.
2006-06-15  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -36,7 +36,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-12 21:19+0200\n"
-"PO-Revision-Date: 2006-04-12 21:20+0200\n"
+"PO-Revision-Date: 2006-06-15 17:30+0200\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1692,7 +1692,7 @@ msgstr "Verschieben"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2058
 msgid "Preparing to Move to Trash..."
-msgstr "Verschieben in den Müll wird vorbereitet..."
+msgstr "Verschieben in den Müll wird vorbereitet …"
 
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2064
@@ -1706,11 +1706,11 @@ msgstr "Datei wird verschoben:"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2069
 msgid "Preparing To Move..."
-msgstr "Verschieben wird vorbereitet..."
+msgstr "Verschieben wird vorbereitet …"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2070
 msgid "Finishing Move..."
-msgstr "Verschieben wird fertiggestellt..."
+msgstr "Verschieben wird fertiggestellt …"
 
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2078
@@ -1729,11 +1729,11 @@ msgstr "Verknüpfen"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2083
 msgid "Preparing to Create Links..."
-msgstr "Anlegen von Verknüpfungen wird vorbereitet..."
+msgstr "Anlegen von Verknüpfungen wird vorbereitet …"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2084
 msgid "Finishing Creating Links..."
-msgstr "Anlegen von Verknüpfungen wird fertiggestellt..."
+msgstr "Anlegen von Verknüpfungen wird fertiggestellt …"
 
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2090
@@ -1752,7 +1752,7 @@ msgstr "Kopieren"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2095
 msgid "Preparing To Copy..."
-msgstr "Kopieren wird vorbereitet..."
+msgstr "Kopieren wird vorbereitet …"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2113
 msgid "You cannot copy items into the trash."
@@ -1857,7 +1857,7 @@ msgstr "Löschen"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2702
 msgid "Preparing to Delete files..."
-msgstr "Löschen von Dateien wird vorbereitet..."
+msgstr "Löschen von Dateien wird vorbereitet …"
 
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2732
@@ -1866,7 +1866,7 @@ msgstr "Müll wird geleert"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2737
 msgid "Preparing to Empty the Trash..."
-msgstr "Leeren des Mülls wird vorbereitet..."
+msgstr "Leeren des Mülls wird vorbereitet …"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2773
 msgid "Empty all of the items from the trash?"
@@ -2641,7 +2641,7 @@ msgstr "Müll _leeren"
 #: ../src/file-manager/fm-desktop-icon-view.c:692
 #: ../src/file-manager/fm-directory-view.c:6654
 msgid "Create L_auncher..."
-msgstr "_Starter anlegen..."
+msgstr "_Starter anlegen …"
 
 #. tooltip
 #. label, accelerator
@@ -3166,7 +3166,7 @@ msgstr "Jedes gewählte Objekt in einem einzelnen Navigationsfenster öffnen"
 #: ../src/file-manager/fm-directory-view.c:6670
 #: ../src/file-manager/fm-directory-view.c:6674
 msgid "Open with Other _Application..."
-msgstr "Mit _anderer Anwendung öffnen..."
+msgstr "Mit _anderer Anwendung öffnen …"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6671
@@ -3267,7 +3267,7 @@ msgstr "Eine symbolische Verknüpfung für jedes gewählte Objekt anlegen"
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6720
 msgid "_Rename..."
-msgstr "_Umbenennen..."
+msgstr "_Umbenennen …"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6721
@@ -3382,7 +3382,7 @@ msgstr "Die bearbeitete Suche speichern"
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6768
 msgid "Sa_ve Search As..."
-msgstr "S_uche speichern unter..."
+msgstr "S_uche speichern unter …"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6769
@@ -3891,7 +3891,7 @@ msgstr "(Leer)"
 #: ../src/file-manager/fm-list-model.c:374
 #: ../src/file-manager/fm-tree-model.c:1213
 msgid "Loading..."
-msgstr "Ladevorgang..."
+msgstr "Ladevorgang …"
 
 #: ../src/file-manager/fm-list-view.c:1922
 #, c-format
@@ -3908,7 +3908,7 @@ msgstr ""
 #. name, stock id
 #: ../src/file-manager/fm-list-view.c:1983
 msgid "Visible _Columns..."
-msgstr "Anzuzeigende _Spalten..."
+msgstr "Anzuzeigende _Spalten …"
 
 #. label, accelerator
 #: ../src/file-manager/fm-list-view.c:1984
@@ -4523,7 +4523,7 @@ msgstr "Umbenennen"
 
 #: ../src/nautilus-emblem-sidebar.c:540
 msgid "Add Emblems..."
-msgstr "Embleme hinzufügen..."
+msgstr "Embleme hinzufügen …"
 
 #: ../src/nautilus-emblem-sidebar.c:556
 msgid ""
@@ -4940,7 +4940,7 @@ msgstr "Bildinformationen konnten nicht geladen werden"
 
 #: ../src/nautilus-image-properties-page.c:420
 msgid "loading..."
-msgstr "Ladevorgang..."
+msgstr "Ladevorgang …"
 
 #: ../src/nautilus-image-properties-page.c:486
 msgid "Image"
@@ -5134,7 +5134,7 @@ msgstr "Alle Navigationsfenster schließen"
 
 #: ../src/nautilus-navigation-window-menus.c:434
 msgid "_Location..."
-msgstr "_Ort..."
+msgstr "_Ort …"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:435
@@ -5274,7 +5274,7 @@ msgstr "Entfernen"
 
 #: ../src/nautilus-places-sidebar.c:1038
 msgid "Rename..."
-msgstr "Umbenennen..."
+msgstr "Umbenennen …"
 
 #: ../src/nautilus-places-sidebar.c:1262
 msgid "Places"
@@ -5291,11 +5291,11 @@ msgstr "Hintergründe und Embleme"
 
 #: ../src/nautilus-property-browser.c:387
 msgid "_Remove..."
-msgstr "_Entfernen..."
+msgstr "_Entfernen …"
 
 #: ../src/nautilus-property-browser.c:407
 msgid "_Add new..."
-msgstr "Neues _hinzufügen..."
+msgstr "Neues _hinzufügen …"
 
 #: ../src/nautilus-property-browser.c:960
 #, c-format
@@ -5420,15 +5420,15 @@ msgstr "Entfernen a_bbrechen"
 
 #: ../src/nautilus-property-browser.c:2120
 msgid "_Add a New Pattern..."
-msgstr "Ein neues Muster _hinzufügen..."
+msgstr "Ein neues Muster _hinzufügen …"
 
 #: ../src/nautilus-property-browser.c:2123
 msgid "_Add a New Color..."
-msgstr "Eine neue Farbe _hinzufügen..."
+msgstr "Eine neue Farbe _hinzufügen …"
 
 #: ../src/nautilus-property-browser.c:2126
 msgid "_Add a New Emblem..."
-msgstr "Ein neues Emblem _hinzufügen..."
+msgstr "Ein neues Emblem _hinzufügen …"
 
 #: ../src/nautilus-property-browser.c:2149
 msgid "Click on a pattern to remove it"
@@ -5456,15 +5456,15 @@ msgstr "Embleme:"
 
 #: ../src/nautilus-property-browser.c:2190
 msgid "_Remove a Pattern..."
-msgstr "Ein Muster _entfernen..."
+msgstr "Ein Muster _entfernen …"
 
 #: ../src/nautilus-property-browser.c:2193
 msgid "_Remove a Color..."
-msgstr "Eine Farbe _entfernen..."
+msgstr "Eine Farbe _entfernen …"
 
 #: ../src/nautilus-property-browser.c:2196
 msgid "_Remove an Emblem..."
-msgstr "Ein Emblem _entfernen..."
+msgstr "Ein Emblem _entfernen …"
 
 #: ../src/nautilus-query-editor.c:132
 msgid "Location"
@@ -5525,7 +5525,7 @@ msgstr "Alle"
 
 #: ../src/nautilus-query-editor.c:650
 msgid "Other Type..."
-msgstr "Anderer Typ..."
+msgstr "Anderer Typ …"
 
 #: ../src/nautilus-query-editor.c:936
 msgid "Remove this criterium from the search"
@@ -5578,7 +5578,7 @@ msgstr "_Orte"
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:837
 msgid "Open _Location..."
-msgstr "_Ort öffnen..."
+msgstr "_Ort öffnen …"
 
 #: ../src/nautilus-spatial-window.c:840
 msgid "Close P_arent Folders"
@@ -5768,7 +5768,7 @@ msgstr "Diesen Ordner schließen"
 
 #: ../src/nautilus-window-menus.c:621
 msgid "_Backgrounds and Emblems..."
-msgstr "_Hintergründe und Embleme..."
+msgstr "_Hintergründe und Embleme …"
 
 #: ../src/nautilus-window-menus.c:622
 msgid ""
@@ -5867,7 +5867,7 @@ msgstr "Den Inhalt in normaler Größe anzeigen"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:678
 msgid "Connect to _Server..."
-msgstr "Mit _Server verbinden..."
+msgstr "Mit _Server verbinden …"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:679
@@ -6824,7 +6824,7 @@ msgstr "Ihre Netzwerk-Server im Dateimanager Nautilus anzeigen"
 #~ msgstr "CD-_Ersteller"
 
 #~ msgid "Open with..."
-#~ msgstr "Öffnen mit..."
+#~ msgstr "Öffnen mit …"
 
 #~ msgid "bonobo_ui_init() failed."
 #~ msgstr "bonobo_ui_init() fehlgeschlagen."
@@ -7149,7 +7149,7 @@ msgstr "Ihre Netzwerk-Server im Dateimanager Nautilus anzeigen"
 #~ msgstr "Fertig"
 
 #~ msgid "_Modify..."
-#~ msgstr "Ä_ndern..."
+#~ msgstr "Ä_ndern …"
 
 #~ msgid "File Types and Programs"
 #~ msgstr "Dateitypen und Programme"
@@ -7251,10 +7251,10 @@ msgstr "Ihre Netzwerk-Server im Dateimanager Nautilus anzeigen"
 #~ msgstr "Dateisystem-Browser"
 
 #~ msgid "_Other Application..."
-#~ msgstr "_Anderer Anwendung..."
+#~ msgstr "_Anderer Anwendung …"
 
 #~ msgid "Open _With..."
-#~ msgstr "Öffnen _mit..."
+#~ msgstr "Öffnen _mit …"
 
 #~ msgid "Open _With"
 #~ msgstr "Öffnen _mit"
@@ -7269,14 +7269,17 @@ msgstr "Ihre Netzwerk-Server im Dateimanager Nautilus anzeigen"
 #~ msgstr "nautilus: --restart kann nicht mit URIs verwendet werden.\n"
 
 #~ msgid "An _Application..."
-#~ msgstr "Einer _Anwendung..."
+#~ msgstr "Einer _Anwendung …"
 
 #~ msgid "View as..."
-#~ msgstr "Ansicht auswählen..."
+#~ msgstr "Ansicht auswählen …"
 
 #~ msgid "Choose a view for the current location, or modify the set of views"
 #~ msgstr ""
 #~ "Eine Ansicht für den aktuellen Ort wählen, oder die Ansichten verändern"
 
 #~ msgid "_View as..."
-#~ msgstr "Ansicht aus_wählen..."
+#~ msgstr "Ansicht aus_wählen …"
+
+
+
