--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-15  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 === nautilus 2.15.2 ===
 
 2006-06-11  Francisco Javier F. Serrador  <serrador@openshine.com>
