--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2006-06-16  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-global-preferences.[ch]:
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Add show_advanced_permissions setting
+	Remove show_special_flags setting, its always on in advanced mode.
+	
+	* libnautilus-private/nautilus-file-operations.[ch]:
+	Add nautilus_file_set_permissions_recursive
+	
+	* src/file-manager/fm-properties-window.c:
+	Change permission page. Implement both simple and advanced mode.
+	Add recursive permissions setting.
+	HIGify some spacing.
+
 2006-06-12  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
